# wsPublish

./: CMakeLists.txt  LICENSE  README  TODO  flibitExample.tar.bz2  wsPublish.cpp
cmdtool/: main.c  platform.c  platform.h
include/wsPublish/: wsPublish.h
src/: wsPublish.cpp
